# gmail-fast-mcp

./: README.md  pyproject.toml
src/gmail_fast_mcp/: __main__.py  email_utils.py  filter_templates.py  gmail_service.py  server.py
src/gmail_fast_mcp/tools/: attachment_ops.py  batch_ops.py  email_ops.py  filter_ops.py  label_ops.py  trash_ops.py
src/gmail_mcp/: __main__.py  auth.py  email_utils.py  gmail_service.py  server.py
src/gmail_mcp/tools/: attachment_ops.py  batch_ops.py  email_ops.py  filter_ops.py  label_ops.py  trash_ops.py
